Added <a> tag to add item on todo templates todo_list.html

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -20,5 +20,6 @@
             <tr><td><h2>You have nothing to do.<br>Go have a lemonade!</h2></td></tr>
         {% endfor %}
     </table>
+    <a href="/add">Add an Item</a>
   </body>
 </html>
