--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -15,6 +15,11 @@
             {% else %}
                 <td>{{ item.name }}</td>
             {% endif %}
+            <td>
+              <a href="/edit/{{ item.id }}">
+                <button>Edit</button>
+              </a>
+            </td>
             </tr>
         {% empty %}
             <tr><td><h2>You have nothing to do.<br>Go have a lemonade!</h2></td></tr>
